--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,9 @@ data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL_hugging_face: knkarthick/samsum
   localDataFolder: artifacts/data_ingestion/data
+
+data_validation:
+  root_dir: artifacts/data_validation
+  inputData: artifacts/data_ingestion/data
+  STATUS_FILE: artifacts/data_validation/status.yaml
+  REQUIRED_FILES: ["train","test","validation"]
